--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
 		"type": "git",
 		"url": "git@github.com:natlibfi/passport-melinda-jwt-js.git"
 	},
-	"license": "LGPL-3.0+",
-	"version": "1.0.1",
+	"license": "MIT+",
+	"version": "1.0.2-alpha.1",
 	"main": "./dist/index.js",
 	"engines": {
-		"node": ">=12"
+		"node": ">=18"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -31,19 +31,19 @@
 		"build": "babel src --source-maps --copy-files --delete-dir-on-start --out-dir=dist"
 	},
 	"dependencies": {
-		"jsonwebtoken": "^8.5.1",
-		"passport": ">=0.4.1 <1.0.0",
-		"passport-jwt": "^4.0.0"
+		"jsonwebtoken": "^9.0.0",
+		"passport": ">=0.6.0 <1.0.0",
+		"passport-jwt": "^4.0.1"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.14.5",
-		"@babel/core": "^7.14.6",
-		"@babel/eslint-parser": "^7.14.7",
-		"@babel/node": "^7.14.7",
-		"@babel/preset-env": "^7.14.7",
-		"@babel/register": "^7.14.5",
-		"@natlibfi/eslint-config-melinda-backend": "^1.0.6",
-		"eslint": "^7.30.0"
+		"@babel/cli": "latest",
+		"@babel/core": "latest",
+		"@babel/eslint-parser": "latest",
+		"@babel/node": "latest",
+		"@babel/preset-env": "latest",
+		"@babel/register": "latest",
+		"@natlibfi/eslint-config-melinda-backend": "^2.0.2",
+		"eslint": "^8.30.0"
 	},
 	"eslintConfig": {
 		"extends": "@natlibfi/melinda-backend"
