--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/passport-melinda-jwt-js.git"
 	},
 	"license": "MIT+",
-	"version": "1.0.2-alpha.1",
+	"version": "1.0.2",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=18"
