--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,7 @@ updates:
       interval: "daily"
       time: "06:30"
       timezone: "Europe/Helsinki"
+    target-branch: "dependencies"
 
   # Minor updates to npm production dependencies daily
   - package-ecosystem: "npm"
@@ -23,6 +24,7 @@ updates:
       - "dependencies"
     allow:
       - dependency-type: "production"
+    target-branch: "dependencies"
 
   # Major updates to npm dependencies weekly @tuesday
   # Not possible yet https://github.com/dependabot/dependabot-core/issues/1778
