--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/passport-melinda-jwt-js.git"
 	},
 	"license": "MIT+",
-	"version": "1.0.2",
+	"version": "1.0.3-alpha.1",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -31,7 +31,7 @@
 		"build": "babel src --source-maps --copy-files --delete-dir-on-start --out-dir=dist"
 	},
 	"dependencies": {
-		"jsonwebtoken": "^9.0.0",
+		"jsonwebtoken": "^9.0.1",
 		"passport": ">=0.6.0 <1.0.0",
 		"passport-jwt": "^4.0.1"
 	},
@@ -42,8 +42,8 @@
 		"@babel/node": "latest",
 		"@babel/preset-env": "latest",
 		"@babel/register": "latest",
-		"@natlibfi/eslint-config-melinda-backend": "^2.0.2",
-		"eslint": "^8.30.0"
+		"@natlibfi/eslint-config-melinda-backend": "^3.0.0",
+		"eslint": "^8.45.0"
 	},
 	"eslintConfig": {
 		"extends": "@natlibfi/melinda-backend"
