--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/passport-melinda-jwt-js.git"
 	},
 	"license": "MIT+",
-	"version": "1.0.4",
+	"version": "1.0.5-alpha.1",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -24,26 +24,25 @@
 	},
 	"scripts": {
 		"prepare": "npm run build",
-		"lint": "eslint src",
-		"lint:dev": "eslint --fix src",
+		"build": "babel ./src --source-maps --copy-files --delete-dir-on-start --out-dir=dist",
+		"lint": "eslint ./src",
+		"lint:dev": "eslint --fix ./src",
 		"test": "npm run lint",
-		"test:dev": "npm run lint:dev",
-		"build": "babel src --source-maps --copy-files --delete-dir-on-start --out-dir=dist"
+		"test:dev": "npm run lint:dev"
 	},
 	"dependencies": {
 		"jsonwebtoken": "^9.0.2",
-		"passport": "^0.6.0",
+		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.22.10",
-		"@babel/core": "^7.22.11",
-		"@babel/eslint-parser": "^7.22.11",
-		"@babel/node": "^7.22.10",
-		"@babel/preset-env": "^7.22.14",
-		"@babel/register": "^7.22.5",
-		"@natlibfi/eslint-config-melinda-backend": "^3.0.1",
-		"eslint": "^8.48.0"
+		"@babel/cli": "^7.23.4",
+		"@babel/core": "^7.23.6",
+		"@babel/node": "^7.22.19",
+		"@babel/preset-env": "^7.23.6",
+		"@babel/register": "^7.22.15",
+		"@natlibfi/eslint-config-melinda-backend": "^3.0.3",
+		"eslint": "^8.56.0"
 	},
 	"eslintConfig": {
 		"extends": "@natlibfi/melinda-backend"
