--- a/.github/workflows/melinda-node-tests.yml
+++ b/.github/workflows/melinda-node-tests.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 19.x, 20.x]
+        node-version: [18.x, 20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -46,10 +46,11 @@ jobs:
   license-scan:
     name: License compliance check
     runs-on: ubuntu-latest
+    container: docker://node:18
 
     steps:
       - uses: actions/checkout@v4
-      - uses: mikaelvesavuori/license-compliance-action@v1.0.2
+      - uses: mikaelvesavuori/license-compliance-action@v1
         with:
           exclude_pattern: /^@natlibfi/
 
