--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"type": "git",
 		"url": "git@github.com:natlibfi/passport-melinda-jwt-js.git"
 	},
-	"license": "MIT+",
-	"version": "1.0.6",
+	"license": "MIT",
+	"version": "1.0.7-alpha.1",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -41,7 +41,7 @@
 		"@babel/node": "^7.23.9",
 		"@babel/preset-env": "^7.24.5",
 		"@babel/register": "^7.23.7",
-		"@natlibfi/eslint-config-melinda-backend": "^3.0.4",
+		"@natlibfi/eslint-config-melinda-backend": "^3.0.5",
 		"eslint": "^8.57.0"
 	},
 	"eslintConfig": {
