--- a/.github/workflows/melinda-node-tests.yml
+++ b/.github/workflows/melinda-node-tests.yml
@@ -46,10 +46,11 @@ jobs:
   license-scan:
     name: License compliance check
     runs-on: ubuntu-latest
+    container: docker://node:18
 
     steps:
       - uses: actions/checkout@v4
-      - uses: mikaelvesavuori/license-compliance-action@v1.0.3
+      - uses: mikaelvesavuori/license-compliance-action@v1
         with:
           exclude_pattern: /^@natlibfi/
 
