--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"type": "git",
 		"url": "git@github.com:natlibfi/passport-melinda-jwt-js.git"
 	},
-	"license": "MIT",
-	"version": "1.0.8-alpha.1",
+	"license": "MIT+",
+	"version": "2.0.0-alpha.3",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=18"
