--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"type": "git",
 		"url": "git@github.com:natlibfi/passport-melinda-jwt-js.git"
 	},
-	"license": "MIT",
-	"version": "1.0.7",
+	"license": "MIT+",
+	"version": "2.0.0-alpha.6",
 	"main": "./dist/index.js",
 	"engines": {
 		"node": ">=18"
@@ -36,11 +36,11 @@
 		"passport-jwt": "^4.0.1"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.24.5",
-		"@babel/core": "^7.24.5",
-		"@babel/node": "^7.23.9",
-		"@babel/preset-env": "^7.24.5",
-		"@babel/register": "^7.23.7",
+		"@babel/cli": "^7.24.8",
+		"@babel/core": "^7.25.2",
+		"@babel/node": "^7.25.0",
+		"@babel/preset-env": "^7.25.3",
+		"@babel/register": "^7.24.6",
 		"@natlibfi/eslint-config-melinda-backend": "^3.0.5",
 		"eslint": "^8.57.0"
 	},
