--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "git@github.com:natlibfi/passport-melinda-jwt-js.git"
 	},
 	"license": "MIT",
-	"version": "2.0.0",
+	"version": "3.0.0-alpha.1",
 	"main": "./dist/index.js",
 	"type": "module",
 	"engines": {
