--- a/.github/workflows/melinda-node-tests.yml
+++ b/.github/workflows/melinda-node-tests.yml
@@ -56,12 +56,16 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    container: node:22
     needs: [build-node-versions, njsscan]
     if: contains(github.ref, 'refs/tags/')
 
     steps:
       - uses: actions/checkout@v5
+      # Setup .npmrc file to publish to npm
+      - uses: actions/setup-node@v5
+        with:
+          node-version: '22.x'
+          registry-url: 'https://registry.npmjs.org'
       - run: npm ci
       - run: npm publish
         env:
