--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"url": "https://github.com/NatLibFi/passport-melinda-jwt-js"
 	},
 	"license": "MIT",
-	"version": "3.0.0-alpha.4",
+	"version": "3.0.0",
 	"main": "./dist/index.js",
 	"type": "module",
 	"engines": {
